[gd_scene load_steps=17 format=2]

[ext_resource path="res://Actors/NPC/Emmy/Emmy_Front-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Actors/NPC/Emmy/NPC_Emmy.gd" type="Script" id=2]
[ext_resource path="res://Actors/NPC/Emmy/Talk_Space.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 123, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 164, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 205, 0, 41, 115 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 115 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Blink",
"speed": 6.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Blink" ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.0
height = 16.0

[sub_resource type="CircleShape2D" id=12]
radius = 42.0476

[sub_resource type="CapsuleShape2D" id=13]
radius = 12.0
height = 22.0

[node name="NPC_Emmy" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Idle"
playing = true

[node name="Sprite_Animation" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 9 )
anims/Idle = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 43 )
shape = SubResource( 11 )

[node name="Talk_Space" type="Area2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talk_Space"]
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -1, 47 )
rotation = 1.5708
shape = SubResource( 13 )

[connection signal="area_entered" from="Talk_Space" to="Talk_Space" method="_on_Talk_Space_area_entered"]
[connection signal="area_exited" from="Talk_Space" to="Talk_Space" method="_on_Talk_Space_area_exited"]
